# simplePlot

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
include/: GnuplotDriver.h
src/: GnuplotDriver.cpp  main.cpp
